Backend: Add repositories, and finished all controllers and services. Frontend: Add message when folders and tasks are empty.

--- a/frontend-ensolvers/src/app/components/folder-list/folder-list.component.html
+++ b/frontend-ensolvers/src/app/components/folder-list/folder-list.component.html
@@ -8,6 +8,7 @@
         <p class="folder-name">- {{folder.name}}</p> <a class="option" [routerLink]="['/folder', folder.id]">View items</a> <a class="option" (click)="removeFolder(folder.id)">Remove</a>
       </li>
     </ul>
+    <div *ngIf="folders.length == 0"><span>Folders is empty</span></div>
   </div>
   <div class="folder-add">
     <form [formGroup]="addFolder">
